--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "fenix",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "express": "^4.21.1"
-  },
-  "author": "eu",
-  "license": "ISC"
-}
+     "name": "fenix",
+     "version": "1.0.0",
+     "description": "",
+     "main": "index.js",
+     "scripts": {
+       "start": "node index.js",
+       "test": "echo \"Error: no test specified\" && exit 1"
+     },
+     "dependencies": {
+       "dialogflow-fulfillment": "^0.6.1",
+       "express": "^4.21.1",
+       "googleapis": "^144.0.0",
+       "moment-timezone": "^0.5.46",
+       "ngrok": "^4.3.0"
+     },
+     "author": "eu",
+     "license": "ISC"
+   }
+   
